tests/fixtures/fail/returned_borrow_field.sc
let Holder(R: region) = struct { value: borrow(R)(i32) }
let main(): i32 = { 42 }
